<resources>
    <string name="app_name">Maç Yorumcu</string>
    <string name="refcode">Referans Kodu</string>
    <string name="nameandsurname">Ad Soyad</string>
    <string name="emailaddress">Email Adres</string>
    <string name="phonenumber">Telefon Numarası</string>
    <string name="signup">Kayıt Ol</string>
    <string name="alreadyhaveanaccount">Zaten hesabınız var mı ?</string>
    <string name="field_required">%s alanı boş veya geçersiz</string>
    <string name="username">Kullanıcı Adı</string>
    <string name="password">Parola</string>
    <string name="login">Giriş</string>
    <string name="error_found">Hata Oluştu.</string>
    <string name="matchreviews"> Maç Yorumları</string>
    <string name="matchestoday">Günün Maçları</string>
    <string name="no_result">Kayıt Bulunamadı...</string>
    <string name="quit">Çıkış</string>
    <string name="forgot_password">Şifremi Unuttum</string>

    <string name="matchreviewtitle">Maçın Yorumu</string>


    <string name="samplereview">  Fransa Lig Kupası çeyrek finalinde Monaco’nun konuğu Rennes olacak. Ev sahibi Monaco bu sezonki kötü gidişata rağmen bu kupada çeyrek finale kadar yükseldi. Ancak Lig 1’de oynadıkları son karşılaşmada son sıradaki Guingamp’a mağlup oldular.
        \nUzun süredir de düşme potasından çıkamadılar. Konuk Rennes ise oldukça formda. Son 6 maçlarından 5 galibiyet, 1 beraberlik çıkardılar.
            \n\nBeraberliği de kupa maçında aldılar. Rennes son 10 maçının tamamında gol atmayı başardı. Monaco savunma anlamında büyük sıkıntılar yaşıyor.
        İyi oranıyla 02 çifte şansı önereceğim. Ancak sürpriz kuponlarda konuk ekip galibiyeti  yer alabilir.

        \n\n   Fransa Lig Kupası çeyrek finalinde Monaco’nun konuğu Rennes olacak. Ev sahibi Monaco bu sezonki kötü gidişata rağmen bu kupada çeyrek finale kadar yükseldi. Ancak Lig 1’de oynadıkları son karşılaşmada son sıradaki Guingamp’a mağlup oldular.
        \nUzun süredir de düşme potasından çıkamadılar. Konuk Rennes ise oldukça formda. Son 6 maçlarından 5 galibiyet, 1 beraberlik çıkardılar.
            \n\nBeraberliği de kupa maçında aldılar. Rennes son 10 maçının tamamında gol atmayı başardı. Monaco savunma anlamında büyük sıkıntılar yaşıyor.
        İyi oranıyla 02 çifte şansı önereceğim. Ancak sürpriz kuponlarda konuk ekip galibiyeti  yer alabilir.
    </string>


    <string name="coupon">Kupon</string>
    <string name="coupons">Kuponlar</string>
    <string name="woncoupons">Kazanan Kuponlar</string>
    <string name="woncoupon">Kazanan Kupon</string>
    <string name="guarantee">Banko</string>
    <string name="fold">Misli</string>
    <string name="guaranteecoupon">Banko Kuponlar</string>
    <string name="foldcoupon">Misli Kuponlar</string>
    <string name="match">Maç:</string>
    <string name="rate">Oran:</string>
    <string name="amount">Tutar:</string>
    <string name="connectionerror">Cihazınızda İnternet Bağlantısı Bulunamadı</string>
    <string name="earn">Kazanç:</string>
    <string name="register_date">Kayıt Tarihi: </string>

    <string name="code">Kod:</string>
    <string name="readcount">Okunma Sayısı:</string>

    <string name="searchteamname">Takım Adı ile Arama</string>

    <string name="prediction">Tahmin:</string>

    <string name="cancel">Vazgeç</string>
    <string name="logout">Çıkış</string>
    <string name="yes">Evet</string>
    <string name="do_you_want_to_quit">Çıkış yapmak istediğinize emin misiniz ?</string>
    <string name="pressexitbutton">Çıkmak için birkez daha basın</string>
    <string name="update">Güncelle</string>
    <string name="newpassword">Yeni Parola Giriniz.</string>
    <string name="newpasswordagain">Yeni Parola Giriniz.(tekrar)</string>
    <string name="cannotmathingpassword">Girilen Parolalar Eşleşmemektedir.</string>

    <string name="updatepassword">Parola Güncelle</string>
    <string name="deletemyaccount">Hesabımı Sil</string>
    <string name="sent">Gönder</string>

    <string name="updatepasswordchangesuccesfully">Parolanız Güncellenmiştir.</string>
    <string name="pleaserelogin">Oturum Sonlandırılmıştır. Yeniden Giriş Yapınız.</string>
    <string name="sentpasswordsuccesfully">Yeni Parolanız Email Adresinize Gönderilmiştir.</string>

    <string name="deletedaccountsuccesfully">Hesabınız Silinmiştir.</string>
</resources>
