<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/popup_bg"
    android:gravity="center_horizontal">
    
	<TextView
	    android:layout_marginTop="8dp"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/logout"
	    android:textSize="18sp"
	    android:textColor="@color/popup_header_text"/>
	<TextView 
	    android:id="@+id/txt_content"
	    android:paddingLeft="24dp"
	    android:paddingRight="24dp"
	    android:gravity="center_horizontal"
	    android:layout_marginTop="2dp"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textSize="16sp"
	    android:textColor="@color/popup_content_text"/>
	<LinearLayout 
		android:layout_width="fill_parent"
		android:layout_height="1dp" 
		android:layout_marginTop="12dp"
		android:background="@color/popup_divider"/>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    <TextView 
	        android:id="@+id/btn_cancel"
	        android:paddingTop="12dp"
	        android:paddingBottom="12dp"
	        android:textSize="16sp"
	        android:textStyle="bold"
	        android:gravity="center_horizontal"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:textColor="@drawable/popup_buttons_text_color"
	        android:text="@string/cancel"
	        android:background="@drawable/popup_deliver_cancel_btn_bg"/>
	    <LinearLayout 
			android:layout_width="1dp"
			android:layout_height="match_parent"
			android:background="@color/popup_divider"/>
	    <TextView 
	        android:id="@+id/btn_ok"
	        android:paddingTop="12dp"
	        android:paddingBottom="12dp"
	        android:textSize="16sp"
	        android:textStyle="bold"
	        android:gravity="center_horizontal"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:textColor="@drawable/popup_buttons_text_color"
	        android:text="@string/yes"
	        android:background="@drawable/popup_deliver_ok_btn_bg"/>
	</LinearLayout>
</LinearLayout>