<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundcolor"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:orientation="vertical"
        android:background="@drawable/group_78">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:background="@color/transparent"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="18dp"
                android:paddingRight="18dp">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/matchestoday"
                    android:scaleType="centerCrop"
                    android:src="@drawable/white_left_arrow" />
            </RelativeLayout>


        </RelativeLayout>

        <TextView
            android:id="@+id/txt_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/coupons"
            android:textColor="@color/white"
            android:textSize="21.3sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_guarantee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:background="@drawable/roun_rect_white"
                android:text="@string/guarantee"
                android:textColor="@color/colorGray"
                android:textSize="12dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_fold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:background="@drawable/roun_rect_gray"
                android:text="@string/fold"
                android:textColor="@color/colorBackroundWhite"
                android:textSize="12dp"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/txt_matchestoday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:letterSpacing="0.0625"
            android:text="@string/matchestoday"
            android:textColor="@color/white"
            android:textSize="13.31sp" />


    </LinearLayout>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/loading"
        android:layout_marginTop="12dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/loading" />
    <android.support.v4.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/couponslist_swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1">


        <android.support.v7.widget.RecyclerView
            android:id="@+id/couponslist_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:scrollbars="vertical" />

    </android.support.v4.widget.SwipeRefreshLayout>




</LinearLayout>
