<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundcolor"
    android:layout_height="match_parent">

    <!--@drawable/backgrondsplash-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:orientation="vertical"
        android:background="@drawable/group_78">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:background="@color/transparent"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="18dp"
                android:paddingRight="18dp">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/matchestoday"
                    android:scaleType="centerCrop"
                    android:src="@drawable/white_left_arrow" />
            </RelativeLayout>


        </RelativeLayout>

        <TextView
            android:id="@+id/txt_matchreviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="14dp"
            android:gravity="center"
            android:text="@string/matchreviews"
            android:textColor="@color/white"
            android:textSize="21.3sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txt_matchestoday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:letterSpacing="0.0625"
                android:text="@string/matchestoday"
                android:textColor="@color/white"
                android:textSize="13.31sp" />

            <TextView
                android:id="@+id/txt_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="13.31sp" />


        </LinearLayout>
        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="3dp"
            android:background="@drawable/search_text_bg"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txt_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/searchteamname"
                android:textSize="15sp"
                android:padding="6dp"
                android:singleLine="true"
                android:gravity="center_vertical"
                android:layout_alignParentLeft="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textColor="@color/black"
                android:background="@color/transparent"
                android:cursorVisible="true"
                android:textCursorDrawable="@null"/>

            <Button
                android:id="@+id/btn_searchteamname"
                android:contentDescription="@string/login"
                android:layout_width="92dp"
                android:background="@color/colorPrimary"
                android:layout_height="42dp"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="Ara"
                android:textColor="@color/white"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"/>


        </RelativeLayout>

    </LinearLayout>


    <ProgressBar
            android:visibility="gone"
            android:id="@+id/loading"
            android:layout_marginTop="12dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/loading" />
    <android.support.v4.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1">


        <android.support.v7.widget.RecyclerView
            android:id="@+id/matchreviews_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:scrollbars="vertical" />

    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>
